# agentic-firmware-experiment

./: .gitignore  README.md  run.sh
.github/workflows/: deploy-pages.yml
docs/: go.mod  hugo.toml
docs/assets/css/extended/: custom.css
docs/content/: _index.md
docs/content/posts/: 2026-03-13-part1.md  2026-03-13-the-experiment-begins.md  2026-03-20-what-a-million-tokens-cant-fix.md  2026-03-27-the-systems-engineering-approach.md  2026-04-10-the-requirements-pipeline.md  2026-04-17-experiment-conclusion.md  next-material.md
docs/layouts/_default/_markup/: render-codeblock-mermaid.html
docs/layouts/partials/: extend_footer.html  extend_head.html  index_profile.html
experiments/part2/nrf54ldk-bme280.step1/: nrf54l15dk_nrf54l15_cpuapp_ns.overlay
experiments/part2/nrf54ldk-bme280.step2/: prj.conf
experiments/part2/nrf54ldk-bme280.step2/src/: main.c
experiments/part2/nrf54ldk-bme280.step3/: prj.conf
experiments/part2/nrf54ldk-bme280.step3/src/: main.c
experiments/part2/nrf54ldk-bme280.step4/: CMakeLists.txt
experiments/part2/nrf54ldk-bme280.step4/src/: main.c
experiments/part3/nrf54ldk-bme280.step1/: CMakeLists.txt
experiments/part4/: srs_to_srs_with_llrs.md  srs_with_llrs_to_code.md  sysrs_to_srs.md  weatherstation_srs_out.md
experiments/part4/nrf54ldk-bme280.step1/: nrf54l15dk_nrf54l15_cpuapp_ns.overlay
experiments/part4/nrf54ldk-bme280.step2/: CMakeLists.txt  verify_traceability.py
experiments/part4/nrf54ldk-bme280.step2/tests/: CMakeLists.txt  test_console_interface.c  test_weather_monitor.c
(+25 files in other folders)
